--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
 <h2>#GivePedsTheGreen</h2>
   <h3>What's this about begging?</h3>
   <img src="beg_sticker.png" style="float:right; margin: 0 1em 1em 1em" alt="push button to beg">
-  <p>When walking around Oakland you may notice that at some intersections you have to push a button in order to get a walk signal. If you don't beg - you will never get a walk signal.</p>
+  <p>When walking around Oakland you may notice (we definitely notice!) that at some intersections pushing a button is required to get a walk signal. If you don't beg - you will never get a walk sign to cross the street.</p>
 
-  <p>Even worse, if you beg after a light cycle has started, you may have to wait until the next light cycle to cross even if there is enough time remaining in the phase for you to cross. Requiring pedestrians to beg, instead of providing <i>recall</i> encourages us to ignore the signal and cross the street illegally.
-  </p>
+  <p>Even worse, if you beg too late, you are forced to wait until the next light cycle to cross even if there is enough time remaining during the green light for you to cross. This encourages people to ignore traffic signals and to cross the street illegally.</p>
 
   <p>In 2015, recognizing that beg buttons are inappropriate at intersections where there are always people walking, the City of Oakland drafted a <a href="http://www2.oaklandnet.com/oakca1/groups/ceda/documents/minutes/oak054151.pdf">Pedestrian Safety Guidance for Signalized Intersections</a> policy. This policy calls for the abolishment of beg buttons in Downtown Oakland and in other areas where there &gt;100 people per hour crossing the street.</p>
 
-  <p>Unfortunately, 3 years later, beg buttons continue to proliferate as OakDOT ignores its own policy. In addition attempts to resolve this issue through official channels including SeeClickFix and <a href="http://www2.oaklandnet.com/government/o/PWA/o/EC/s/BicycleandPedestrianProgram/BPAC/index.htm">Oakland's Bicycle and Pedestrian Advisory Commission</a> have failed. Now it's up to us to pressure The City to act.</p>
+  <p>Unfortunately, 3 years later, city employees with "windshield bias" have obstructed this policy with a single minded focus on speeding drivers through our streets. This obsession with vehicular traffic results in absurdities such as the beg button to cross Telegraph at 20th street where there are more people crossing Telegraph to access BART and AC Transit then in cars.</p>
 
+  <p>This issue has brought before <a href="http://www2.oaklandnet.com/government/o/PWA/o/EC/s/BicycleandPedestrianProgram/BPAC/index.htm">Oakland's Bicycle and Pedestrian Advisory Commission</a> and we have been advised to report intersections to the city through SeeClickFix. These reports are then summarily ignored or closed without actually fixing the issue. OakDOT and City of Oakland leadership need to fix the dysfunctional city bureaucracy that has allowed a few public employees to stymie the policy goals of the department.</p>
 
-  <h3>Take action:</h3>
+  <h3>Take action and tell OakDOT: Stop the begging</h3>
     <ol>
-      <li><a style="font-weight:bold" href="https://www.change.org/p/we-demand-oakdot-implement-its-draft-pedestrian-safety-guidance-for-signalized-intersections">Sign the petition</a> demanding that OakDOT implement its <a href="http://www2.oaklandnet.com/oakca1/groups/ceda/documents/minutes/oak054151.pdf">Draft Pedestrian Safety Guidance for Signalized Intersections</a> policy</li>
-      <li>Tweet at <a href="https://twitter.com/OakDOT">@OakDOT</a> when you have to beg to cross the street. Use the hashtag #GivePedsTheGreen.</li>
-      <li>Tweet at <a href="https://twitter.com/OakDOTr">@OakDOTr</a> to request stickers at beg buttons</li>
+      <li><a style="font-weight:bold" href="https://www.change.org/p/we-demand-oakdot-implement-its-draft-pedestrian-safety-guidance-for-signalized-intersections">Sign the petition</a> demanding that OakDOT implement its <a href="http://www2.oaklandnet.com/oakca1/groups/ceda/documents/minutes/oak054151.pdf">Draft Pedestrian Safety Guidance for Signalized Intersections</a> policy.</li>
+      <li>Ask Ryan Russo (<a href="mailto:rrusso@oaklandnet.com">rrusso@oaklandnet.com</a>), Director of OakDOT, why you have to beg to cross the street.</li>
+      <li>Tweet at <a href="https://twitter.com/OakDOT">@OakDOT</a> when you are delayed by begging. Use the hashtag <a href="https://twitter.com/search?f=tweets&vertical=default&q=%23GivePedsTheGreen&src=typd">#GivePedsTheGreen.</a></li>
     </ol>
 
 
