--- a/index.html
+++ b/index.html
@@ -36,9 +36,16 @@
 
   <p>In 2015, recognizing that beg buttons are inappropriate at intersections where there are always people walking, the City of Oakland drafted a <a href="http://www2.oaklandnet.com/oakca1/groups/ceda/documents/minutes/oak054151.pdf">Pedestrian Safety Guidance for Signalized Intersections</a> policy. This policy calls for the abolishment of beg buttons in Downtown Oakland and in other areas where there &gt;100 people per hour crossing the street.</p>
 
-  <p>Unfortunately, 3 years later, city employees with "windshield bias" have obstructed this policy with a single minded focus on speeding drivers through our streets. This obsession with vehicular traffic results in absurdities such as the beg button to cross Telegraph at 20th street where there are more people crossing Telegraph to access BART and AC Transit then in cars.</p>
+  <p>Unfortunately, 3 years later, nothing has changed and beg buttons continue to proliferate throughout Oakland. The lack of follow through and accountability in OakDOT has resulted beg buttons to access BART including at:
+    <ul>
+      <li>Telegraph at 20th Street</li>
+      <li>40th Street at MacArthur BART Access Road</li>
+      <li>7th Street at Mandela Parkway</li>
+    </ul>
 
-  <p>This issue has brought before <a href="http://www2.oaklandnet.com/government/o/PWA/o/EC/s/BicycleandPedestrianProgram/BPAC/index.htm">Oakland's Bicycle and Pedestrian Advisory Commission</a> and we have been advised to report intersections to the city through SeeClickFix. These reports are then summarily ignored or closed without actually fixing the issue. OakDOT and City of Oakland leadership need to fix the dysfunctional city bureaucracy that has allowed a few public employees to stymie the policy goals of the department.</p>
+  </p>
+
+  <p>This issue has brought before <a href="http://www2.oaklandnet.com/government/o/PWA/o/EC/s/BicycleandPedestrianProgram/BPAC/index.htm">Oakland's Bicycle and Pedestrian Advisory Commission</a> and we have been advised to report intersections to the city through SeeClickFix. These reports are then summarily ignored or closed without actually fixing the issue. OakDOT and City of Oakland leadership need to fix the dysfunctional city bureaucracy that has allowed this issue to fester for years.</p>
 
   <h3>Take action and tell OakDOT: Stop the begging</h3>
     <ol>
