--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
 
   </style>
   <title>OakDOTr - Oakland Department of Transformation</title>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112255034-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112255034-1');
+</script>
+
 </head>
 <body>
 <h1>OakDOTr</h1>
